Fix Routing First

--- a/app/templates/brand/cars/car.hbs
+++ b/app/templates/brand/cars/car.hbs
@@ -1,9 +1,9 @@
-<h2>{{this.model.car.name}}</h2>
+<h2>{{this.model.name}}</h2>
 
 <h3>Drivers</h3>
 
 <ul>
-  {{#each this.model.drivers as |driver|}}
+  {{#each this.drivers as |driver|}}
     <li>{{driver.name}}</li>
   {{/each}}
 </ul>
